QA-12146: Fixed Scrollbar issue on FF in Windows

--- a/war/src/main/webapp/engines/jahia-anthracite/css/_edit_engine.scss
+++ b/war/src/main/webapp/engines/jahia-anthracite/css/_edit_engine.scss
@@ -2733,17 +2733,13 @@ div.engine-window {
 			// Container for body
 			width: 100%!important;
 			height: 100%!important;
-			overflow: scroll;
+			overflow: auto;
 
 			> div {
 				width: 100%!important;
 				height: 100%!important;
 			}
 
-		}
-
-		> .x-panel-body {
-			overflow: hidden;
 		}
 
 		.x-window-bbar,
